; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_eap_ttls.c_eap_ttls_getKey.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_eap_ttls.c_eap_ttls_getKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eap_sm = type { i32 }
%struct.eap_ttls_data = type { i32*, i32 }

@EAP_TLS_KEY_LEN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.eap_sm*, i8*, i64*)* @eap_ttls_getKey to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @eap_ttls_getKey(%struct.eap_sm* %0, i8* %1, i64* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.eap_sm*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64*, align 8
  %8 = alloca %struct.eap_ttls_data*, align 8
  %9 = alloca i32*, align 8
  store %struct.eap_sm* %0, %struct.eap_sm** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64* %2, i64** %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to %struct.eap_ttls_data*
  store %struct.eap_ttls_data* %11, %struct.eap_ttls_data** %8, align 8
  %12 = load %struct.eap_ttls_data*, %struct.eap_ttls_data** %8, align 8
  %13 = getelementptr inbounds %struct.eap_ttls_data, %struct.eap_ttls_data* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %21, label %16

16:                                               ; preds = %3
  %17 = load %struct.eap_ttls_data*, %struct.eap_ttls_data** %8, align 8
  %18 = getelementptr inbounds %struct.eap_ttls_data, %struct.eap_ttls_data* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %16, %3
  store i32* null, i32** %4, align 8
  br label %35

22:                                               ; preds = %16
  %23 = load %struct.eap_ttls_data*, %struct.eap_ttls_data** %8, align 8
  %24 = getelementptr inbounds %struct.eap_ttls_data, %struct.eap_ttls_data* %23, i32 0, i32 0
  %25 = load i32*, i32** %24, align 8
  %26 = load i64, i64* @EAP_TLS_KEY_LEN, align 8
  %27 = call i32* @os_memdup(i32* %25, i64 %26)
  store i32* %27, i32** %9, align 8
  %28 = load i32*, i32** %9, align 8
  %29 = icmp eq i32* %28, null
  br i1 %29, label %30, label %31

30:                                               ; preds = %22
  store i32* null, i32** %4, align 8
  br label %35

31:                                               ; preds = %22
  %32 = load i64, i64* @EAP_TLS_KEY_LEN, align 8
  %33 = load i64*, i64** %7, align 8
  store i64 %32, i64* %33, align 8
  %34 = load i32*, i32** %9, align 8
  store i32* %34, i32** %4, align 8
  br label %35

35:                                               ; preds = %31, %30, %21
  %36 = load i32*, i32** %4, align 8
  ret i32* %36
}

declare dso_local i32* @os_memdup(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
